[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/sketch_editor/SketchEditor.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
shadow_color = Color( 0, 0, 0, 0.207843 )
shadow_size = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.137255 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.243137 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="SketchEditor2" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 360 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 128
custom_constants/margin_top = 64
custom_constants/margin_left = 128
custom_constants/margin_bottom = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 656.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 592.0

[node name="Control" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
mouse_filter = 1

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_right = 91.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "  Save Sketch "

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextAttach" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="TextEditor" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/TextAttach"]
margin_left = 8.0
margin_right = 1016.0
margin_bottom = 556.0
syntax_highlighting = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialogPopUp" type="FileDialog" parent="Panel"]
visible = true
margin_right = 1024.0
margin_bottom = 592.0
access = 2
current_dir = "/Users/DREAMER/smce-gd/project"
current_path = "/Users/DREAMER/smce-gd/project/"

[connection signal="file_selected" from="Panel/SaveDialogPopUp" to="." method="_on_save_sketch_confirmed"]
